# ProgrammingVUZ

./: Lab3.sln  README.md  СMakeLists.txt
Lab1/: CMakeLists.txt  Lab1.cpp
Lab2/: CMakeLists.txt  Lab2.cpp
Lab3/: CMakeLists.txt  Lab3.cpp
Lab4/: CMakeLists.txt  Lab4.cpp
Lab5/: CMakeLists.txt  Lab5.cpp
Lab5/source/: CMakeLists.txt  source.cpp  source.h
